# pipico_build_setup

./: .gitignore  Dockerfile  README.md
blink_example/: CMakeLists.txt  main.c  pico_sdk_import.cmake  readme.md
dino_names_example/: CMakeLists.txt  main.cxx  readme.md
oled_example/: CMakeLists.txt  main.c  readme.md
